// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SocialButtonIconWords <FacebookButtonIconWords /> matches with snapshot 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border: 0.125rem solid #3b5998;
  background-color: #3b5998;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled,
.c0.k-Button--disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0:focus-visible {
  outline-color: #bae8fd;
}

.c0.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--tiny {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c0.k-Button--regular {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--big {
  --Button-dimension: 3.125rem;
}

.c0.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--fit-min-width:not(.k-Button--fit-icon):not(.k-Button--fit-fluid) {
  min-width: var(--Button-min-width);
}

.c0.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c0.k-Button--fit-fluid {
  width: 100%;
}

.c0.k-Button--hasBorderRadius {
  border-radius: var(--Button-border-radius);
}

.c0.k-Button--rounded {
  border-radius: 50%;
}

.c0.k-Button--orion {
  border-radius: 0.375rem;
}

.c0 svg:not(.k-ColorSvg),
.c0 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #2c4a89;
  background-color: #2c4a89;
  color: #fff;
}

.c0:active {
  border-color: #1d3b7a;
  background-color: #1d3b7a;
  color: #fff;
}

.c0:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0:focus-visible {
  outline-color: #bae8fd;
}

.c0:disabled,
.c0.k-Button--disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media (min-width:40rem) {
  .c0.k-Button--big {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    font-size: 1rem;
    --Button-padding: 0.625rem 2.5rem;
  }
}

@media (max-width:39.9375rem) {
  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none) {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion {
    border-radius: 0.5rem;
  }
}

<button
  className="c0 k-Button k-Button--regular k-Button--social_facebook k-Button--andromeda k-Button--fit-min-width k-Button--mobile-fit-none"
  style={
    Object {
      "--Button-border-radius": 0,
    }
  }
  type="button"
>
  <svg
    fill="#222"
    height="14"
    viewBox="0 0 8 15"
    width="7"
    xmlns="http://www.w3.org/2000/svg"
  >
    
    <path
      d="M4.785 14.196V7.72H6.96l.324-2.523h-2.5v-1.61c0-.732.204-1.23 1.252-1.23h1.336V.1C7.142.07 6.348 0 5.425 0 3.498 0 2.18 1.176 2.18 3.336v1.86H0v2.525h2.18v6.476h2.605z"
    />
  </svg>
  <span>
    Facebook
  </span>
</button>
`;

exports[`SocialButtonIconWords <FacebookButtonIconWords /> with props matches with snapshot 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border: 0.125rem solid #3b5998;
  background-color: #3b5998;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled,
.c0.k-Button--disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0:focus-visible {
  outline-color: #bae8fd;
}

.c0.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--tiny {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c0.k-Button--regular {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--big {
  --Button-dimension: 3.125rem;
}

.c0.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--fit-min-width:not(.k-Button--fit-icon):not(.k-Button--fit-fluid) {
  min-width: var(--Button-min-width);
}

.c0.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c0.k-Button--fit-fluid {
  width: 100%;
}

.c0.k-Button--hasBorderRadius {
  border-radius: var(--Button-border-radius);
}

.c0.k-Button--rounded {
  border-radius: 50%;
}

.c0.k-Button--orion {
  border-radius: 0.375rem;
}

.c0 svg:not(.k-ColorSvg),
.c0 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #2c4a89;
  background-color: #2c4a89;
  color: #fff;
}

.c0:active {
  border-color: #1d3b7a;
  background-color: #1d3b7a;
  color: #fff;
}

.c0:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0:focus-visible {
  outline-color: #bae8fd;
}

.c0:disabled,
.c0.k-Button--disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media (min-width:40rem) {
  .c0.k-Button--big {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    font-size: 1rem;
    --Button-padding: 0.625rem 2.5rem;
  }
}

@media (max-width:39.9375rem) {
  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none) {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion {
    border-radius: 0.5rem;
  }
}

<button
  className="c0 k-Button k-Button--big k-Button--social_facebook k-Button--andromeda k-Button--fit-min-width k-Button--mobile-fit-none k-Button--fit-fluid"
  style={
    Object {
      "--Button-border-radius": 0,
    }
  }
  type="button"
>
  <svg
    fill="#222"
    height="14"
    viewBox="0 0 8 15"
    width="7"
    xmlns="http://www.w3.org/2000/svg"
  >
    
    <path
      d="M4.785 14.196V7.72H6.96l.324-2.523h-2.5v-1.61c0-.732.204-1.23 1.252-1.23h1.336V.1C7.142.07 6.348 0 5.425 0 3.498 0 2.18 1.176 2.18 3.336v1.86H0v2.525h2.18v6.476h2.605z"
    />
  </svg>
  <span>
    Facebook
  </span>
</button>
`;

exports[`SocialButtonIconWords <InstagramButtonIconWords /> matches with snapshot 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border: 0.125rem solid #3b5998;
  background-color: #3b5998;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  -webkit-transition: background 0.2s,color 0.2s;
  transition: background 0.2s,color 0.2s;
  border: 0 !important;
  background-repeat: no-repeat;
  background-image: radial-gradient( farthest-side at 32% 100%,#ffe17d 0%,#ffcd69 10%,#fa9137 28%,#eb4141 42%,transparent 82% ),linear-gradient(135deg,#234bd7 12%,#c33cbe 58%);
  background-size: 160% 100%;
  background-position: center;
}

.c0:disabled,
.c0.k-Button--disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0:focus-visible {
  outline-color: #bae8fd;
}

.c0.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--tiny {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c0.k-Button--regular {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--big {
  --Button-dimension: 3.125rem;
}

.c0.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--fit-min-width:not(.k-Button--fit-icon):not(.k-Button--fit-fluid) {
  min-width: var(--Button-min-width);
}

.c0.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c0.k-Button--fit-fluid {
  width: 100%;
}

.c0.k-Button--hasBorderRadius {
  border-radius: var(--Button-border-radius);
}

.c0.k-Button--rounded {
  border-radius: 50%;
}

.c0.k-Button--orion {
  border-radius: 0.375rem;
}

.c0 svg:not(.k-ColorSvg),
.c0 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  background-image: radial-gradient( farthest-side at 32% 100%,#f0d26e 0%,#f0be5a 10%,#eb8228 28%,#dc3232 42%,transparent 82% ),linear-gradient(135deg,#143cc8 12%,#b42daf 58%);
}

.c0:active {
  background-image: radial-gradient( farthest-side at 32% 100%,#e1c35f 0%,#e1af4b 10%,#dc7319 28%,#cd2323 42%,transparent 82% ),linear-gradient(135deg,#052db9 12%,#a51ea0 58%);
}

.c0:hover,
.c0:focus {
  border-color: #2c4a89;
  background-color: #2c4a89;
  color: #fff;
}

.c0:active {
  border-color: #1d3b7a;
  background-color: #1d3b7a;
  color: #fff;
}

.c0:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0:focus-visible {
  outline-color: #bae8fd;
}

.c0:disabled,
.c0.k-Button--disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media (min-width:40rem) {
  .c0.k-Button--big {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    font-size: 1rem;
    --Button-padding: 0.625rem 2.5rem;
  }
}

@media (max-width:39.9375rem) {
  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none) {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion {
    border-radius: 0.5rem;
  }
}

<button
  className="c0 k-Button k-Button--regular k-Button--social_instagram k-Button--andromeda k-Button--fit-min-width k-Button--mobile-fit-none"
  style={
    Object {
      "--Button-border-radius": 0,
    }
  }
  type="button"
>
  <svg
    fill="#222"
    height="16"
    viewBox="0 0 70 70"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    
    <path
      d="M17 0A17 17 0 0 0 0 17v36a17 17 0 0 0 17 17h36a17 17 0 0 0 17-17V17A17 17 0 0 0 53 0zm0 6h36a10.91 10.91 0 0 1 11 11v36a10.91 10.91 0 0 1-11 11H17A10.91 10.91 0 0 1 6 53V17A10.91 10.91 0 0 1 17 6zm38 6a4 4 0 1 0 4 4 4 4 0 0 0-4-4zm-20 6a17 17 0 1 0 17 17 17 17 0 0 0-17-17zm0 6a11 11 0 1 1-11 11 11 11 0 0 1 11-11z"
    />
  </svg>
  <span>
    Instagram
  </span>
</button>
`;

exports[`SocialButtonIconWords <InstagramButtonIconWords /> with props matches with snapshot 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border: 0.125rem solid #3b5998;
  background-color: #3b5998;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  -webkit-transition: background 0.2s,color 0.2s;
  transition: background 0.2s,color 0.2s;
  border: 0 !important;
  background-repeat: no-repeat;
  background-image: radial-gradient( farthest-side at 32% 100%,#ffe17d 0%,#ffcd69 10%,#fa9137 28%,#eb4141 42%,transparent 82% ),linear-gradient(135deg,#234bd7 12%,#c33cbe 58%);
  background-size: 160% 100%;
  background-position: center;
}

.c0:disabled,
.c0.k-Button--disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0:focus-visible {
  outline-color: #bae8fd;
}

.c0.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--tiny {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c0.k-Button--regular {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--big {
  --Button-dimension: 3.125rem;
}

.c0.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--fit-min-width:not(.k-Button--fit-icon):not(.k-Button--fit-fluid) {
  min-width: var(--Button-min-width);
}

.c0.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c0.k-Button--fit-fluid {
  width: 100%;
}

.c0.k-Button--hasBorderRadius {
  border-radius: var(--Button-border-radius);
}

.c0.k-Button--rounded {
  border-radius: 50%;
}

.c0.k-Button--orion {
  border-radius: 0.375rem;
}

.c0 svg:not(.k-ColorSvg),
.c0 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  background-image: radial-gradient( farthest-side at 32% 100%,#f0d26e 0%,#f0be5a 10%,#eb8228 28%,#dc3232 42%,transparent 82% ),linear-gradient(135deg,#143cc8 12%,#b42daf 58%);
}

.c0:active {
  background-image: radial-gradient( farthest-side at 32% 100%,#e1c35f 0%,#e1af4b 10%,#dc7319 28%,#cd2323 42%,transparent 82% ),linear-gradient(135deg,#052db9 12%,#a51ea0 58%);
}

.c0:hover,
.c0:focus {
  border-color: #2c4a89;
  background-color: #2c4a89;
  color: #fff;
}

.c0:active {
  border-color: #1d3b7a;
  background-color: #1d3b7a;
  color: #fff;
}

.c0:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0:focus-visible {
  outline-color: #bae8fd;
}

.c0:disabled,
.c0.k-Button--disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media (min-width:40rem) {
  .c0.k-Button--big {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    font-size: 1rem;
    --Button-padding: 0.625rem 2.5rem;
  }
}

@media (max-width:39.9375rem) {
  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none) {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion {
    border-radius: 0.5rem;
  }
}

<button
  className="c0 k-Button k-Button--big k-Button--social_instagram k-Button--andromeda k-Button--fit-min-width k-Button--mobile-fit-none k-Button--fit-fluid"
  style={
    Object {
      "--Button-border-radius": 0,
    }
  }
  type="button"
>
  <svg
    fill="#222"
    height="16"
    viewBox="0 0 70 70"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    
    <path
      d="M17 0A17 17 0 0 0 0 17v36a17 17 0 0 0 17 17h36a17 17 0 0 0 17-17V17A17 17 0 0 0 53 0zm0 6h36a10.91 10.91 0 0 1 11 11v36a10.91 10.91 0 0 1-11 11H17A10.91 10.91 0 0 1 6 53V17A10.91 10.91 0 0 1 17 6zm38 6a4 4 0 1 0 4 4 4 4 0 0 0-4-4zm-20 6a17 17 0 1 0 17 17 17 17 0 0 0-17-17zm0 6a11 11 0 1 1-11 11 11 11 0 0 1 11-11z"
    />
  </svg>
  <span>
    Instagram
  </span>
</button>
`;

exports[`SocialButtonIconWords <LinkedinButtonIconWords /> matches with snapshot 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border: 0.125rem solid #00669e;
  background-color: #00669e;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled,
.c0.k-Button--disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0:focus-visible {
  outline-color: #bae8fd;
}

.c0.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--tiny {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c0.k-Button--regular {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--big {
  --Button-dimension: 3.125rem;
}

.c0.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--fit-min-width:not(.k-Button--fit-icon):not(.k-Button--fit-fluid) {
  min-width: var(--Button-min-width);
}

.c0.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c0.k-Button--fit-fluid {
  width: 100%;
}

.c0.k-Button--hasBorderRadius {
  border-radius: var(--Button-border-radius);
}

.c0.k-Button--rounded {
  border-radius: 50%;
}

.c0.k-Button--orion {
  border-radius: 0.375rem;
}

.c0 svg:not(.k-ColorSvg),
.c0 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #00578f;
  background-color: #00578f;
  color: #fff;
}

.c0:active {
  border-color: #004880;
  background-color: #004880;
  color: #fff;
}

.c0:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0:focus-visible {
  outline-color: #bae8fd;
}

.c0:disabled,
.c0.k-Button--disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media (min-width:40rem) {
  .c0.k-Button--big {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    font-size: 1rem;
    --Button-padding: 0.625rem 2.5rem;
  }
}

@media (max-width:39.9375rem) {
  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none) {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion {
    border-radius: 0.5rem;
  }
}

<button
  className="c0 k-Button k-Button--regular k-Button--social_linkedin k-Button--andromeda k-Button--fit-min-width k-Button--mobile-fit-none"
  style={
    Object {
      "--Button-border-radius": 0,
    }
  }
  type="button"
>
  <svg
    fill="#222"
    height="12"
    viewBox="0 0 14 14"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    
    <path
      d="M1.622 0a1.62 1.62 0 1 1-.002 3.242A1.62 1.62 0 0 1 1.622 0zm-1.4 13.465H3.02V4.47H.222v8.995zM4.773 4.47h2.68V5.7h.038c.374-.707 1.286-1.452 2.646-1.452 2.83 0 3.353 1.862 3.353 4.284v4.933h-2.796V9.09c0-1.042-.018-2.384-1.452-2.384-1.455 0-1.677 1.137-1.677 2.31v4.45H4.773V4.47"
    />
  </svg>
  <span>
    Linkedin
  </span>
</button>
`;

exports[`SocialButtonIconWords <LinkedinButtonIconWords /> with props matches with snapshot 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border: 0.125rem solid #00669e;
  background-color: #00669e;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled,
.c0.k-Button--disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0:focus-visible {
  outline-color: #bae8fd;
}

.c0.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--tiny {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c0.k-Button--regular {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--big {
  --Button-dimension: 3.125rem;
}

.c0.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--fit-min-width:not(.k-Button--fit-icon):not(.k-Button--fit-fluid) {
  min-width: var(--Button-min-width);
}

.c0.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c0.k-Button--fit-fluid {
  width: 100%;
}

.c0.k-Button--hasBorderRadius {
  border-radius: var(--Button-border-radius);
}

.c0.k-Button--rounded {
  border-radius: 50%;
}

.c0.k-Button--orion {
  border-radius: 0.375rem;
}

.c0 svg:not(.k-ColorSvg),
.c0 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #00578f;
  background-color: #00578f;
  color: #fff;
}

.c0:active {
  border-color: #004880;
  background-color: #004880;
  color: #fff;
}

.c0:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0:focus-visible {
  outline-color: #bae8fd;
}

.c0:disabled,
.c0.k-Button--disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media (min-width:40rem) {
  .c0.k-Button--big {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    font-size: 1rem;
    --Button-padding: 0.625rem 2.5rem;
  }
}

@media (max-width:39.9375rem) {
  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none) {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion {
    border-radius: 0.5rem;
  }
}

<button
  className="c0 k-Button k-Button--big k-Button--social_linkedin k-Button--andromeda k-Button--fit-min-width k-Button--mobile-fit-none k-Button--fit-fluid"
  style={
    Object {
      "--Button-border-radius": 0,
    }
  }
  type="button"
>
  <svg
    fill="#222"
    height="12"
    viewBox="0 0 14 14"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    
    <path
      d="M1.622 0a1.62 1.62 0 1 1-.002 3.242A1.62 1.62 0 0 1 1.622 0zm-1.4 13.465H3.02V4.47H.222v8.995zM4.773 4.47h2.68V5.7h.038c.374-.707 1.286-1.452 2.646-1.452 2.83 0 3.353 1.862 3.353 4.284v4.933h-2.796V9.09c0-1.042-.018-2.384-1.452-2.384-1.455 0-1.677 1.137-1.677 2.31v4.45H4.773V4.47"
    />
  </svg>
  <span>
    Linkedin
  </span>
</button>
`;

exports[`SocialButtonIconWords <TwitterButtonIconWords /> matches with snapshot 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border: 0.125rem solid #55acee;
  background-color: #55acee;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled,
.c0.k-Button--disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0:focus-visible {
  outline-color: #bae8fd;
}

.c0.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--tiny {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c0.k-Button--regular {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--big {
  --Button-dimension: 3.125rem;
}

.c0.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--fit-min-width:not(.k-Button--fit-icon):not(.k-Button--fit-fluid) {
  min-width: var(--Button-min-width);
}

.c0.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c0.k-Button--fit-fluid {
  width: 100%;
}

.c0.k-Button--hasBorderRadius {
  border-radius: var(--Button-border-radius);
}

.c0.k-Button--rounded {
  border-radius: 50%;
}

.c0.k-Button--orion {
  border-radius: 0.375rem;
}

.c0 svg:not(.k-ColorSvg),
.c0 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #469ddf;
  background-color: #469ddf;
  color: #fff;
}

.c0:active {
  border-color: #388ed0;
  background-color: #388ed0;
  color: #fff;
}

.c0:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0:focus-visible {
  outline-color: #bae8fd;
}

.c0:disabled,
.c0.k-Button--disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media (min-width:40rem) {
  .c0.k-Button--big {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    font-size: 1rem;
    --Button-padding: 0.625rem 2.5rem;
  }
}

@media (max-width:39.9375rem) {
  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none) {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion {
    border-radius: 0.5rem;
  }
}

<button
  className="c0 k-Button k-Button--regular k-Button--social_twitter k-Button--andromeda k-Button--fit-min-width k-Button--mobile-fit-none"
  style={
    Object {
      "--Button-border-radius": 0,
    }
  }
  type="button"
>
  <svg
    fill="#222"
    height="12"
    viewBox="0 0 15 14"
    width="15"
    xmlns="http://www.w3.org/2000/svg"
  >
    
    <path
      d="M15.256 1.468a6.22 6.22 0 0 1-1.797.493c.645-.387 1.14-1 1.375-1.73a6.276 6.276 0 0 1-1.988.758A3.128 3.128 0 0 0 7.433 3.13c0 .245.027.484.08.713a8.88 8.88 0 0 1-6.45-3.27 3.13 3.13 0 0 0 .968 4.179A3.109 3.109 0 0 1 .614 4.36v.04c0 1.516 1.08 2.78 2.51 3.07a3.2 3.2 0 0 1-.824.11c-.203 0-.4-.02-.59-.058a3.13 3.13 0 0 0 2.924 2.174A6.273 6.273 0 0 1 0 10.992a8.86 8.86 0 0 0 4.798 1.407c5.757 0 8.906-4.77 8.906-8.907 0-.136-.003-.27-.01-.405a6.332 6.332 0 0 0 1.562-1.62"
    />
  </svg>
  <span>
    Twitter
  </span>
</button>
`;

exports[`SocialButtonIconWords <TwitterButtonIconWords /> with props matches with snapshot 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border: 0.125rem solid #55acee;
  background-color: #55acee;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0:disabled,
.c0.k-Button--disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0:focus-visible {
  outline-color: #bae8fd;
}

.c0.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c0.k-Button--tiny {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c0.k-Button--regular {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--big {
  --Button-dimension: 3.125rem;
}

.c0.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--fit-min-width:not(.k-Button--fit-icon):not(.k-Button--fit-fluid) {
  min-width: var(--Button-min-width);
}

.c0.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c0.k-Button--fit-fluid {
  width: 100%;
}

.c0.k-Button--hasBorderRadius {
  border-radius: var(--Button-border-radius);
}

.c0.k-Button--rounded {
  border-radius: 50%;
}

.c0.k-Button--orion {
  border-radius: 0.375rem;
}

.c0 svg:not(.k-ColorSvg),
.c0 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c0:hover,
.c0:focus {
  border-color: #469ddf;
  background-color: #469ddf;
  color: #fff;
}

.c0:active {
  border-color: #388ed0;
  background-color: #388ed0;
  color: #fff;
}

.c0:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c0:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0:focus-visible {
  outline-color: #bae8fd;
}

.c0:disabled,
.c0.k-Button--disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

@media (min-width:40rem) {
  .c0.k-Button--big {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    font-size: 1rem;
    --Button-padding: 0.625rem 2.5rem;
  }
}

@media (max-width:39.9375rem) {
  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none) {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c0[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--orion {
    border-radius: 0.5rem;
  }
}

<button
  className="c0 k-Button k-Button--big k-Button--social_twitter k-Button--andromeda k-Button--fit-min-width k-Button--mobile-fit-none k-Button--fit-fluid"
  style={
    Object {
      "--Button-border-radius": 0,
    }
  }
  type="button"
>
  <svg
    fill="#222"
    height="12"
    viewBox="0 0 15 14"
    width="15"
    xmlns="http://www.w3.org/2000/svg"
  >
    
    <path
      d="M15.256 1.468a6.22 6.22 0 0 1-1.797.493c.645-.387 1.14-1 1.375-1.73a6.276 6.276 0 0 1-1.988.758A3.128 3.128 0 0 0 7.433 3.13c0 .245.027.484.08.713a8.88 8.88 0 0 1-6.45-3.27 3.13 3.13 0 0 0 .968 4.179A3.109 3.109 0 0 1 .614 4.36v.04c0 1.516 1.08 2.78 2.51 3.07a3.2 3.2 0 0 1-.824.11c-.203 0-.4-.02-.59-.058a3.13 3.13 0 0 0 2.924 2.174A6.273 6.273 0 0 1 0 10.992a8.86 8.86 0 0 0 4.798 1.407c5.757 0 8.906-4.77 8.906-8.907 0-.136-.003-.27-.01-.405a6.332 6.332 0 0 0 1.562-1.62"
    />
  </svg>
  <span>
    Twitter
  </span>
</button>
`;
